# ComfyUI-interactive-crop

./: .gitignore  LICENSE  README.md  __init__.py  interactive_crop.py  pyproject.toml
js/: interactive_crop.js
