[project]
name = "comfyui-ugleh-interactive-crop"
version = "0.1.0"
description = "Interactive crop node for ComfyUI (inline preview with draggable selection)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ugleh" }]

dependencies = [
  # This is a ComfyUI custom_nodes repo; packaging is optional.
  # Keep dependencies empty unless you truly require extra pip packages.
]

[project.urls]
Repository = "https://github.com/Ugleh/ComfyUI-interactive-crop"

[tool.comfy]
PublisherId = "ugleh"
DisplayName = "ComfyUI-interactive-crop"

[tool.setuptools]
# This is a ComfyUI custom_nodes repo; packaging is optional.
# The 'name' field is used by ComfyUI-Manager for folder normalization.
